--- a/rate/rate.css
+++ b/rate/rate.css
@@ -69,3 +69,35 @@
 .rating > input:checked + label {
     color: gold;
 }
+.rotateimg180 {
+    -webkit-transform:rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+
+.drank  input[type='checkbox'] {
+    display:none;
+}
+ .drank   input[type='checkbox']+ label:before {
+    --fa-rotate-angle: 180deg;
+    display: inline-block;
+    font-family: 'Font Awesome 5 Free';
+    content: "\f5ce";
+	font-size:1.5rem;
+	cursor:pointer;
+    font-weight: 600;
+    color: #d1d1d2;
+    
+ 
+ }
+ .drank  input[type='checkbox']:checked + label:before {
+    font-family: 'Font Awesome 5 Free';
+    content: "\f4e3";
+	font-size:1.5rem;
+	cursor:pointer;
+    font-weight: 900;
+    color: #FFD43B;
+    
+ }
