Update rate.css, ajax.php, _config.php, and added theme_sm2024.css + welcome carousel

--- a/rate/css/rate.css
+++ b/rate/css/rate.css
@@ -38,6 +38,13 @@
     color: black;
     font-weight: bold;
 }
+
+.btn-primary:disabled {
+    background-color: #c7bda7;
+    border-color: #c7bda7;
+    color: black;
+    font-weight: regular;
+}
 .btn-primary:hover {
     -webkit-transform: scale(1.1);
     background-color: #d49910;
