namn på huvudklass visning

--- a/rate/css/rate.css
+++ b/rate/css/rate.css
@@ -101,7 +101,11 @@
     font-weight: bold;
     margin-bottom: 0.4rem;
 }
+.beer-class-header{
+    font-size: 2.5rem;
+    font-weight: 300;
 
+}
 .beer-number {
 
 }
